@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam lineType polyline


skinparam classAttributeIconSize 0

class ListBookingRequestUI{}

class ListBookingRequestController{
+getAgentAdvertisements(email)
+getVisitRequest(list, dStart, dEnd)
}

class Repositories{
+getInstance()
+getAdvertisementRepository()
+getEmployeeRepository()
}

class AdvertisementRepository{
-List<Advertisement> AdvertisementList
+getVisitRequestList(list, dStart, dEnd)
+getAgentAdvertisements(email)
}

class EmployeeRepository{
-List<Employee> EmployeeList
+getEmployeeByEmail(email)
}

class Database{
+sendEmail(emailMsg)
}


class Advertisement{
-String dateOfAdvertisement
-Request request
-Commission commission
-ArrayList<PurchaseOrder> purchaseOrderList
-ArrayList<VisitRequest> visitRequestList
-String status
-Store store

+getEmployeeByEmail()
+getVisitRequestAdvertisement(visit request)

}

class VisitRequest{
-String name
-String phoneNumber
-String dateOfVisit
-String timeSlotStart
-String timeSlotEnd
-String message
-String status
}

Interface Employee{
}

ListBookingRequestUI ..> ListBookingRequestController
ListBookingRequestController ..> Repositories
ListBookingRequestController ..> AdvertisementRepository

Repositories -->"1" AdvertisementRepository
Repositories -->"1" EmployeeRepository


AdvertisementRepository "1"-->"*" Advertisement
EmployeeRepository "1"-->"*" Employee

Advertisement "1" -->"*" VisitRequest

ListBookingRequestController ..> Advertisement
ListBookingRequestController ....> VisitRequest
ListBookingRequestController ....> Employee

ListBookingRequestController --> Database
@enduml